# SkyCamOS

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SkyCamOS.md  docker-compose.yml  logsterminal.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
backend/: .env.example  requirements.txt  start.bat
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  analytics.py  auth.py  cameras.py  events.py  export.py  health.py  notifications.py  recordings.py  settings.py  storage.py  stream.py
backend/app/core/: __init__.py  database.py  security.py
backend/app/models/: __init__.py  camera.py  event.py  recording.py  storage_pool.py  user.py
backend/app/schemas/: __init__.py  camera.py  event.py  recording.py  user.py
backend/app/services/: __init__.py  auto_recording_manager.py  export_service.py  line_crossing.py  motion_detection.py  notification_service.py  onvif_discovery.py  person_detection.py  recording_service.py  ssdp_discovery.py  storage_manager.py  storage_pool_service.py  stream_service.py
database/: README.md  schema.sql
database/migrations/: 001_initial_schema.sql  002_seed_data.sql
database/scripts/: backup_db.py  init_db.py
desktop/: requirements.txt  run.py  start-desktop-tray.bat  start-desktop.bat
desktop/app/: __init__.py  config.py  main.py
desktop/app/services/: __init__.py  auto_start.py  camera_discovery.py  disk_manager.py  process_manager.py
desktop/app/ui/: __init__.py  main_window.py  system_tray.py
desktop/app/utils/: __init__.py  logger.py  network.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TROUBLESHOOTING.md
frontend/: .env.example  package-lock.json  package.json  serve.json  start.bat  vercel.json
frontend/public/: env.js  index.html  manifest.json  service-worker.js  sw.js
frontend/scripts/: build.js
frontend/src/: App.js  index.js
frontend/src/components/: CameraCard.js  CameraGrid.js  EventList.js  Header.js  LoginForm.js  MosaicSelector.js  NotificationBell.js  Sidebar.js  Timeline.js  VideoPlayer.js
frontend/src/hooks/: useAuth.js  useCamera.js  useNotifications.js  useWebSocket.js
frontend/src/pages/: Dashboard.js  Events.js  Export.js  Login.js  Recordings.js  Settings.js
frontend/src/services/: api.js  auth.js  notifications.js  storage.js  websocket.js
frontend/src/styles/: components.css  main.css  variables.css
frontend/src/utils/: constants.js  dateFormatter.js  helpers.js
