# ==============================================================================
# SkyCamOS - Python Project Configuration
# Sistema de Monitoramento de Cameras IP
# ==============================================================================
# Configuracao centralizada para o projeto Python:
# - Metadados do projeto
# - Dependencias
# - Ferramentas de desenvolvimento (black, ruff, pytest, mypy)
# ==============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ==============================================================================
# Metadados do Projeto
# ==============================================================================
[project]
name = "skycamos"
version = "1.0.0"
description = "Sistema de Monitoramento de Cameras IP - Backend API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "SkyCamOS Team", email = "team@skycamos.local" }
]
maintainers = [
    { name = "SkyCamOS Team", email = "team@skycamos.local" }
]
keywords = [
    "camera",
    "ip-camera",
    "surveillance",
    "monitoring",
    "nvr",
    "dvr",
    "cctv",
    "video",
    "streaming",
    "rtsp",
    "onvif",
    "fastapi",
    "opencv"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Typing :: Typed"
]

# Dependencias principais
dependencies = [
    # Framework Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",

    # Banco de Dados
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "aiosqlite>=0.19.0",

    # Validacao e Serialization
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # Autenticacao
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",

    # Video e Imagem
    "opencv-python-headless>=4.9.0.80",
    "numpy>=1.26.3",
    "Pillow>=10.2.0",

    # Cache e Filas
    "redis>=5.0.1",
    "aioredis>=2.0.1",

    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",

    # Utilitarios
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "orjson>=3.9.10",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",

    # ONVIF para cameras IP
    "onvif-zeep>=0.2.12",

    # WebSockets
    "websockets>=12.0",

    # Agendamento de tarefas
    "apscheduler>=3.10.4",
]

# Dependencias opcionais
[project.optional-dependencies]
# Desenvolvimento
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
    "black>=23.12.1",
    "ruff>=0.1.11",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "debugpy>=1.8.0",
    "watchfiles>=0.21.0",
]

# Producao
prod = [
    "sentry-sdk>=1.39.1",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

# Documentacao
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
]

# Todos os extras
all = [
    "skycamos[dev]",
    "skycamos[prod]",
    "skycamos[docs]",
]

[project.urls]
Homepage = "https://github.com/skycamos/skycamos"
Documentation = "https://docs.skycamos.local"
Repository = "https://github.com/skycamos/skycamos"
Issues = "https://github.com/skycamos/skycamos/issues"
Changelog = "https://github.com/skycamos/skycamos/blob/main/CHANGELOG.md"

[project.scripts]
skycamos = "backend.main:run"

# ==============================================================================
# Setuptools
# ==============================================================================
[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "docs*"]

# ==============================================================================
# Black - Formatador de Codigo
# ==============================================================================
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# ==============================================================================
# Ruff - Linter e Formatador Rapido
# ==============================================================================
[tool.ruff]
# Versao Python alvo
target-version = "py311"

# Largura maxima da linha
line-length = 88

# Arquivos a ignorar
extend-exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "*.pyi",
]

[tool.ruff.lint]
# Regras habilitadas
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (comentarios mortos)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (seguranca)
]

# Regras a ignorar
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "B009",    # do not call getattr with a constant attribute value
    "S101",    # use of assert detected (ok em testes)
    "S104",    # possible binding to all interfaces
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

# Fixers automaticos seguros
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignora regras especificas em arquivos de teste
"tests/**/*.py" = [
    "S101",    # assert ok em testes
    "ARG",     # unused arguments ok em fixtures
    "PLR2004", # magic values ok em testes
]
"**/conftest.py" = [
    "ARG",     # unused arguments ok em fixtures
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
]

# ==============================================================================
# MyPy - Type Checker
# ==============================================================================
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignora imports sem stubs
ignore_missing_imports = true

# Plugins
plugins = [
    "pydantic.mypy",
]

# Configuracoes do Pydantic
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Ignorar modulos especificos
[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "onvif.*",
    "zeep.*",
]
ignore_missing_imports = true

# ==============================================================================
# Pytest - Testes
# ==============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Opcoes padrao
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]

# Marcadores customizados
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]

# Modo asyncio
asyncio_mode = "auto"

# Filtros de warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==============================================================================
# Coverage - Cobertura de Testes
# ==============================================================================
[tool.coverage.run]
source = ["backend"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
]

[tool.coverage.paths]
source = ["backend"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@typing.overload",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==============================================================================
# Bandit - Seguranca
# ==============================================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # assert_used

# ==============================================================================
# Pre-commit Hooks (referencia)
# ==============================================================================
# Para usar pre-commit, crie um arquivo .pre-commit-config.yaml na raiz:
#
# repos:
#   - repo: https://github.com/pre-commit/pre-commit-hooks
#     rev: v4.5.0
#     hooks:
#       - id: trailing-whitespace
#       - id: end-of-file-fixer
#       - id: check-yaml
#       - id: check-added-large-files
#
#   - repo: https://github.com/astral-sh/ruff-pre-commit
#     rev: v0.1.11
#     hooks:
#       - id: ruff
#         args: [--fix]
#       - id: ruff-format
#
#   - repo: https://github.com/pre-commit/mirrors-mypy
#     rev: v1.8.0
#     hooks:
#       - id: mypy
#         additional_dependencies: [pydantic]
